tests/attributes/format.rs
use designal::Designal;

#[derive(Designal)]
#[designal(rename = "NewBean", ,)]
struct HumanBean();

#[derive(Designal)]
#[designal(snozzcumber)]
struct HumanBean1();

fn main() {}